--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-793.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-389.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇮🇳 印度-2.33MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.24MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇸🇬 新加坡-2.55MB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-301.8KB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
   - {name: 🇻🇳 越南-1.40MB/s(Youtube:不良林), server: 123.31.41.42, port: 80, type: vmess, uuid: 0d89d3a3-17c0-4b8d-cdb6-a441207e1a38, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 123.31.41.42}}
   - {name: 🇨🇦 加拿大-584.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-2.26MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-793.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
       - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
