--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,13 +6,8 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-389.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇮🇳 印度-2.33MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.24MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-301.8KB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-1.40MB/s(Youtube:不良林), server: 123.31.41.42, port: 80, type: vmess, uuid: 0d89d3a3-17c0-4b8d-cdb6-a441207e1a38, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 123.31.41.42}}
-  - {name: 🇨🇦 加拿大-584.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-180.0KB/s(Youtube:不良林), server: 123.31.41.42, port: 80, type: vmess, uuid: 0d89d3a3-17c0-4b8d-cdb6-a441207e1a38, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 123.31.41.42}}
   - {name: 🇫🇷 法国-2.26MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
@@ -22,13 +17,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -37,13 +27,8 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -53,13 +38,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -73,13 +53,8 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,13 +63,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,13 +74,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,13 +94,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-389.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.8KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
       - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
 rules:
