--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-180.0KB/s(Youtube:不良林), server: 123.31.41.42, port: 80, type: vmess, uuid: 0d89d3a3-17c0-4b8d-cdb6-a441207e1a38, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 123.31.41.42}}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.95MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇰🇷 韩国-1.32MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-578.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-372.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 台湾-2.56MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-604.4KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇫🇷 法国-578.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-372.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-604.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇫🇷 法国-578.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-372.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-604.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇫🇷 法国-578.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-372.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-604.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇫🇷 法国-578.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-372.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-604.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇫🇷 法国-578.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-372.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-604.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇫🇷 法国-578.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-372.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-604.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇻🇳 越南-180.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
       - 🇫🇷 法国-578.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-372.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.56MB/s(Youtube:不良林)
+      - 🇬🇧 英国-604.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
