--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,14 +7,14 @@ external-controller: :9090
 proxies:
   - {name: 🇫🇷 法国-526.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-325.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-882.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-742.7KB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.62MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-742.7KB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-325.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 1aa8948e-1ec1-455f-9e0e-16deebe5502e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
   - {name: 🇨🇳 中国-239.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 26062, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.82MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-764.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -23,14 +23,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -38,14 +38,14 @@ proxy-groups:
     proxies:
       - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -54,14 +54,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,14 +74,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -89,14 +89,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,14 +105,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,14 +130,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇫🇷 法国-526.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-882.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-742.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-325.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-239.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
